working out the swagger
