# routes/index.js
@@ -1,7 +1,7 @@
 const routes = require('express').Router();
 const contacts = require('./contacts');
 
-routes.use('/contacts', contacts);
+routes.use('/', contacts);
 routes.use(
   '/',
   (docData = (req, res) => {
